src/CalcBlock/calcItem.css
.calculator input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.calculator input[type="number"] {
  -moz-appearance: textfield;
}

.calculator {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  width: calc(100% - 30px);
  max-width: 780px;
  height: 100%;
  margin: 100px auto;
  border-radius: 15px;
  overflow: hidden;
  background: #f1f2f8;
}

.calculator .MuiInputBase-colorPrimary {
  background: #fff;
}

.calculator .MuiFormHelperText-root {
  margin-right: 0;
  margin-left: 0;
}

.calculator h2 {
  width: 100%;
  padding: 20px;
  background-color: rgb(213 215 230);
  color: #12396c;
  font-size: 24px;
}

.calculator .content {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  width: 100%;
  padding: 30px 20px 20px;
  gap: 24px;
}

.calculator .wrap_input {
  display: flex;
  flex-direction: column;
  gap: 10px;
  justify-content: flex-end;
}

.calculator .tagline {
  margin-top: -5px;
  font-size: 12px;
}

.calculator .row_wrap {
  width: 100%;
  display: grid;
  gap: 18px;
  align-items: start;
}

.calculator .row_inner {
  display: flex;
  flex-direction: column;
  gap: 24px;
}

.calculator .row_wrap.grid-2 {
  grid-template-columns: repeat(2, minmax(0, 1fr));
}

.calculator .total_block {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  gap: 0;
  height: 100%;
  justify-content: space-between;
  background: #fff;
  border-radius: 4px;
}

.calculator .total_block .border_line {
  width: calc(100% - 30px);
  height: 1px;
  background: rgb(239 240 249);
}

.calculator .total_block_item {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 10px;
  font-size: 14px;
}

.calculator .total_block_item p {
  font-weight: 500;
  text-align: center;
  font-size: 15px;
}

.calculator .total_block_item p.helper {
  font-size: 12px;
  margin-top: -5px;
}

.calculator .total_block_item span {
  font-size: 18px;
  font-weight: 800;
  text-align: center;
  color: #0062e3;
}

.calculator .total_inner {
  padding: 20px 0;
  display: flex;
  flex-direction: column;
  gap: 20px;
  margin: 0px 15px;
}

.calculator .reset_wrap {
  display: flex;
  justify-content: end;
  width: 100%;
}

.calculator .reset_wrap button {
  border: 0;
  padding: 10px 20px;
  border-radius: 4px;
  border: 1px solid #0062e3;
  background: #0062e3;
  color: #fff;
  font-size: 16px;
  font-weight: 500;
  cursor: pointer;
  transition: all 0.3s ease;
}

.calculator .reset_wrap button:hover {
  background: #fff;
  color: #0062e3;
}

@media screen and (max-width: 768px) {
  .calculator .content {
    padding: 20px 10px;
  }

  .calculator .row_wrap {
    gap: 24px;
  }

  .calculator .row_wrap.grid-2 {
    grid-template-columns: repeat(1, minmax(0, 1fr));
  }

  .calculator .total_block_item br {
    display: none;
  }

  .calculator .total_block .row_wrap.grid-2 {
    gap: 0;
  }

  .calculator .total_block_item {
    gap: 6px;
  }

  .calculator {
    margin: 40px auto;
  }

  .calculator .total_inner.first {
    padding-bottom: 10px;
  }

  .calculator .total_inner.last {
    padding-top: 10px;
  }
}

